--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Group3101Madrid"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Home2"
+            android:exported="false"
+            android:label="@string/title_activity_home2" />
         <!-- Other Activities -->
         <activity
             android:name=".Iniciodesafios"
@@ -25,19 +28,16 @@
             android:exported="false" />
         <activity
             android:name=".Registro"
-            android:exported="false" />
-
-        <!-- Login Activity (Launcher) -->
+            android:exported="false" /> <!-- Login Activity (Launcher) -->
         <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
